WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
99106
Local disable of stack corruption warning when compiling on VS2012
https://bugs.webkit.org/show_bug.cgi?id=99106
Summary
Local disable of stack corruption warning when compiling on VS2012
Scott Graham
Reported
2012-10-11 15:28:01 PDT
Local disable of stack corruption warning when compiling on VS2012
Attachments
Patch
(2.36 KB, patch)
2012-10-11 15:35 PDT
,
Scott Graham
no flags
Details
Formatted Diff
Diff
Patch
(2.40 KB, patch)
2012-10-11 15:48 PDT
,
Scott Graham
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Scott Graham
Comment 1
2012-10-11 15:35:39 PDT
Created
attachment 168291
[details]
Patch
Build Bot
Comment 2
2012-10-11 15:39:16 PDT
Comment on
attachment 168291
[details]
Patch
Attachment 168291
[details]
did not pass mac-ews (mac): Output:
http://queues.webkit.org/results/14265070
Scott Graham
Comment 3
2012-10-11 15:48:36 PDT
Created
attachment 168297
[details]
Patch
WebKit Review Bot
Comment 4
2012-10-11 16:48:03 PDT
Comment on
attachment 168297
[details]
Patch Rejecting
attachment 168297
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: t in Source/WebCore/ChangeLog Auto-merging Source/WebCore/page/FrameView.cpp Failed to merge in the changes. Patch failed at 0001 Incorrect/Illegal static cast in FrameView.cpp When you have resolved this problem run "git rebase --continue". If you would prefer to skip this patch, instead run "git rebase --skip". To restore the original branch and stop rebasing run "git rebase --abort". rebase refs/remotes/origin/master: command returned error: 1 Died at Tools/Scripts/update-webkit line 164. Full output:
http://queues.webkit.org/results/14264134
Scott Graham
Comment 5
2012-10-12 09:17:40 PDT
The cq fail seems unrelated to this patch?
WebKit Review Bot
Comment 6
2012-10-12 11:46:25 PDT
Comment on
attachment 168297
[details]
Patch Clearing flags on attachment: 168297 Committed
r131205
: <
http://trac.webkit.org/changeset/131205
>
WebKit Review Bot
Comment 7
2012-10-12 11:46:28 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug